<resources>
    <string name="app_name">Cook &amp; Share</string>

    <!-- Auth -->
    <string name="welcome_to">WELCOME TO</string>
    <string name="get_started">GET STARTED</string>
    <string name="show_the_world">SHOW THE WORLD YOUR COOKING SKILLS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_community">JOIN OUR COMMUNITY</string>
    <string name="create_account">Let\'s create an account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Have an account?</string>

    <!-- Feed -->
    <string name="home">HOME</string>
    <string name="show_recipe">SHOW RECIPE</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="preparation_time">PREPARATION TIME</string>
    <string name="notes">NOTES</string>

    <!-- Profile -->
    <string name="my_profile">MY PROFILE</string>
    <string name="my_recipes">MY RECIPES</string>
    <string name="saved_recipes">SAVED RECIPES</string>

    <!-- Search -->
    <string name="search">Search</string>
</resources>